--- a/links/style-theory.css
+++ b/links/style-theory.css
@@ -9,7 +9,7 @@ body {
     font-weight: bolder;
     text-align: center;
     text-decoration: underline;
-    color: darkslategrey;
+    color: darkred;
     padding-bottom: 50px;
 }
 
